# vibraalto-core

./: README.md  exoleon-hook.js  fabrication.html  firebase.json  index.html  monday-mentor.html  pyproject.toml  styles.css
.firebase/: hosting..cache
.github/workflows/: firebase-hosting.yml
agents/: particles.ts
agents/particles/: index.ts  shaders.ts
assets/: presets.json
assets/css/: monday-mentor.css  styles.css
assets/img/modo-anime/fichas/: Agente Monday – La Entidad cansada del sistema. Representa la lucha contra la rutina digital. Esta ficha contiene imagen, historia y sus habilidades clave.  (+5 more)
assets/js/: experience.js  fabrication.js  main.js  presets.js  rhymez.js
core/: README.md  scene.ts
core/legacy/: README.md
core/shared-core/: README.md
core/shared-core/components/: Footer.js  Header.js  Modal.js  QRButton.js
core/shared-core/js/: age-gate.js  analytics.js  config.js  exo-bridge.js  session.js
core/shared-core/styles/: base.css  variables.css  vibra.css
field/: noise.ts
fields/: sdf.ts
modo-anime/: index.html
pipeline/: __init__.py  blender_runner.py  cli.py  density_capture.py
public/: agegate.css  agegate.html  agegate.js  exoleon-hook.js  index.html  muro.html  planb.md
public/assets/: core.js  styles.css
public/media/blog-futuro/: index.html
public/media/planeta-base-vibra/: index.html
public/media/verdades-archivo/: index.html
rhymez/: index.html
shaders/: curl-noise-3d.glsl
tools/: __init__.py  blender_postprocess.py  marching_cubes.py  marching_cubes_tables.py  mesh_exporter.py
ui/: commands.ts
